Bootstrap contents are added

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -20,3 +20,4 @@ label.admission= Einreichung einreichen
 label.error= Fehlerseite
 label.green= Grünes Thema
 label.red = Rotes Thema
+label.studentNumber= Nummer des Studenten
