--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -24,3 +24,4 @@ label.admission= Kayıt Gönderme
 label.error = Hata Sayfası
 label.green= Yeşil Tema
 label.red=Kırmızı Tema
+label.studentNumber= Öğrenci Numarası
