--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -24,3 +24,4 @@ label.admission= Submit Admission
 label.error = Error Page
 label.green=Green Theme
 label.red= Red Theme
+label.studentNumber= Student's Number
