Added new messages to the properties files.

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -21,3 +21,8 @@ label.error= Fehlerseite
 label.green= Grünes Thema
 label.red = Rotes Thema
 label.studentNumber= Nummer des Studenten
+label.lecturePlan= Lecture Plan
+label.students= Studenten
+label.teachers = Lehreren
+label.contact = Kontakt
+label.about = Über Uns
