--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -25,3 +25,8 @@ label.error = Error Page
 label.green=Green Theme
 label.red= Red Theme
 label.studentNumber= Student's Number
+label.lecturePlan= Lecture Plan
+label.students= Students
+label.teachers = Teachers
+label.contact = Contact
+label.about = About
