--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -25,3 +25,8 @@ label.error = Hata Sayfası
 label.green= Yeşil Tema
 label.red=Kırmızı Tema
 label.studentNumber= Öğrenci Numarası
+label.lecturePlan= Ders Programı
+label.students= Öğrenciler
+label.teachers = Öğretmenler
+label.contact = İletişim
+label.about = Hakkımızda
