Added database queries for student admission

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -26,3 +26,5 @@ label.students= Studenten
 label.teachers = Lehreren
 label.contact = Kontakt
 label.about = Über Uns
+label.studentAdmission=Student Einreichung
+label.home=Startseite
