--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -30,3 +30,5 @@ label.students= Students
 label.teachers = Teachers
 label.contact = Contact
 label.about = About
+label.studentAdmission=Student Admission
+label.home=Home
