--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -30,3 +30,5 @@ label.students= Öğrenciler
 label.teachers = Öğretmenler
 label.contact = İletişim
 label.about = Hakkımızda
+label.studentAdmission=Öğrenci Kayıt
+label.home=Anasayfa
