Added new fields to the student class

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -2,7 +2,8 @@
 
 Size.student1.studentHobby=Bitte geben Sie einen Wert für {0} zwischen {2} und {1} Zeichen ein.
 label.admissionHeader=Studentische Zulassung für Universitätslehrgänge
-label.studentName= Name des Studenten
+label.studentName= Vorname des Studenten
+label.studentSurname=Nachname des Studenten
 label.studentHobby= Schülerhobby
 label.studentMobile=Telefonnummer des Studenten
 label.studentBirthday= Schüler Geburtstag
@@ -28,3 +29,4 @@ label.contact = Kontakt
 label.about = Über Uns
 label.studentAdmission=Student Einreichung
 label.home=Startseite
+label.studentFaculty=Fakultät
