--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -7,6 +7,7 @@ Size.student1.studentHobby=Lütfen  {0} için  {2} ile {1} karakter arasında bi
 
 label.admissionHeader=Öğrenci Kayıt
 label.studentName= Öğrenci Adı
+label.studentSurname= Öğrenci Soyadı
 label.studentHobby= Hobi
 label.studentMobile=Telefon Numarası
 label.studentBirthday= Doğum günü
@@ -32,3 +33,4 @@ label.contact = İletişim
 label.about = Hakkımızda
 label.studentAdmission=Öğrenci Kayıt
 label.home=Anasayfa
+label.studentFaculty=Fakülte
