--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -7,6 +7,7 @@ Size.student1.studentHobby=Please enter a value for {0} between {2} and {1} char
 
 label.admissionHeader=Student Admission for University Courses
 label.studentName= Student's Name
+label.studentSurname=Student's Surname
 label.studentHobby= Student's Hobby
 label.studentMobile=Student's Mobile
 label.studentBirthday= Student's Birthday
@@ -32,3 +33,4 @@ label.contact = Contact
 label.about = About
 label.studentAdmission=Student Admission
 label.home=Home
+label.studentFaculty=Faculty
