Teacher pages are added

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -30,3 +30,8 @@ label.about = Über Uns
 label.studentAdmission=Student Einreichung
 label.home=Startseite
 label.studentFaculty=Fakultät
+label.artsandsciences = Kunst und Wissenschaften
+label.economics=Wirtschaft
+label.education=Bildung
+label.engineering=Ingenieurwesen
+label.foreignlanguages=Fremdsprachen
