--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -34,3 +34,8 @@ label.about = About
 label.studentAdmission=Student Admission
 label.home=Home
 label.studentFaculty=Faculty
+label.artsandsciences = Arts And Sciences
+label.economics=Economics
+label.education=Education
+label.engineering=Engineering
+label.foreignlanguages=Foreign Languages
