--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -34,3 +34,9 @@ label.about = Hakkımızda
 label.studentAdmission=Öğrenci Kayıt
 label.home=Anasayfa
 label.studentFaculty=Fakülte
+label.artsandsciences = Fen-Edebiyat
+label.economics=Iktisat
+label.education=Eğitim
+label.engineering=Mühendislik
+label.foreignlanguages=Yabancı Diller
+
