Added new labels to the properties files

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -35,3 +35,9 @@ label.economics=Wirtschaft
 label.education=Bildung
 label.engineering=Ingenieurwesen
 label.foreignlanguages=Fremdsprachen
+label.addTeacher= Füge einen Lehrer hinzu
+label.addStudent= Füge einen Schüler hinzu
+label.teacherHeader1=Alle Lehrer sind unten zu sehen
+label.teacherHeader2=Sie können auf den beliebigen Lehrernamen für weitere Details klicken
+label.studentHeader1=Alle Schüler sind unten zu sehen
+label.studentHeader2=Sie können auf den beliebigen Studentennamen klicken
