--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -12,7 +12,7 @@ label.studentHobby= Student's Hobby
 label.studentMobile=Student's Mobile
 label.studentBirthday= Student's Birthday
 label.studentSkills=Student's Skills
-label.address=Student's Adress
+label.address=Student's Address
 label.studentAddress.country= Country
 label.studentAddress.city= City
 label.studentAddress.street= Street
@@ -28,7 +28,7 @@ label.red= Red Theme
 label.studentNumber= Student's Number
 label.lecturePlan= Lecture Plan
 label.students= Students
-label.teachers = Teachers
+label.teachers = Instructors
 label.contact = Contact
 label.about = About
 label.studentAdmission=Student Admission
@@ -39,3 +39,9 @@ label.economics=Economics
 label.education=Education
 label.engineering=Engineering
 label.foreignlanguages=Foreign Languages
+label.addTeacher= Add a Instructor
+label.addStudent= Add a Student
+label.teacherHeader1=All of the teachers can be seen below
+label.teacherHeader2=You can click the any teacher name for more details
+label.studentHeader1=All of the students can be seen below
+label.studentHeader2=You can click the any student name for more details
