--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -35,8 +35,15 @@ label.studentAdmission=Öğrenci Kayıt
 label.home=Anasayfa
 label.studentFaculty=Fakülte
 label.artsandsciences = Fen-Edebiyat
-label.economics=Iktisat
+label.economics=İktisat
 label.education=Eğitim
 label.engineering=Mühendislik
 label.foreignlanguages=Yabancı Diller
+label.addTeacher= Öğretmen Ekle
+label.addStudent= Öğrenci Ekle
+label.teacherHeader1=Bütün öğretmenleri aşağıdaki tabloda görebilirsiniz
+label.teacherHeader2=Daha fazla bilgi için öğretmen ismine tıklayın
+label.studentHeader1=Bütün öğrencileri aşağıdaki tabloda görebilirsiniz
+label.studentHeader2=Daha fazla bilgi için öğretmen ismine tıklayın
+
 
