Added title information to the every html page

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -1,7 +1,7 @@
 #Uygulamanin almanca olmasi icin gereken properties dosyasi.
 
 Size.student1.studentHobby=Bitte geben Sie einen Wert für {0} zwischen {2} und {1} Zeichen ein.
-label.admissionHeader=Studentische Zulassung für Universitätslehrgänge
+label.admissionHeader=
 label.studentName= Vorname des Studenten
 label.studentSurname=Nachname des Studenten
 label.studentHobby= Schülerhobby
@@ -17,7 +17,6 @@ label.submitMessage=Klicken Sie auf die Schaltfläche, um Ihre Daten einzureiche
 label.submit= Einzureichen
 label.details=Angaben von Ihnen eingereicht
 label.successfulAdmission=Erfolgreicher Eintritt
-label.admission= Einreichung einreichen
 label.error= Fehlerseite
 label.green= Grünes Thema
 label.red = Rotes Thema
@@ -41,3 +40,13 @@ label.teacherHeader1=Alle Lehrer sind unten zu sehen
 label.teacherHeader2=Sie können auf den beliebigen Lehrernamen für weitere Details klicken
 label.studentHeader1=Alle Schüler sind unten zu sehen
 label.studentHeader2=Sie können auf den beliebigen Studentennamen klicken
+label.instructorName= Vorname des Lehrers
+label.instructorSurname= Nachname des Lehrers
+label.instructorMobile= TelefonNummber
+label.title = Adel
+label.office= Stelle
+label.email=E-Mail
+label.addTeacherHeader= Lehrerzulassung für Universitätslehrgänge
+label.addTeacherTitle= Einreichung einreichen
+label.addStudentTitle= Einreichung einreichen
+label.addStudentHeader= Studentische Zulassung für Universitätslehrgänge
