--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -5,7 +5,10 @@ Size.student1.studentHobby=Please enter a value for {0} between {2} and {1} char
 # {0} field adi, 2 ve 1 ise studentHobby size icin belirlenen min(2) ve max(1) degiskenleri.
 # Max'in 1. olma nedeni ise alfabetik siralanmalari
 
-label.admissionHeader=Student Admission for University Courses
+label.addTeacherHeader= Teacher Admission
+label.addTeacherTitle=Submit Teacher
+label.addStudentTitle=Submit Student
+label.addStudentHeader=Student Admission for University Courses
 label.studentName= Student's Name
 label.studentSurname=Student's Surname
 label.studentHobby= Student's Hobby
@@ -21,7 +24,6 @@ label.submitMessage=Click the button in order to submit your details
 label.submit=Submit
 label.details=Details submitted by you
 label.successfulAdmission=Successful Admission
-label.admission= Submit Admission
 label.error = Error Page
 label.green=Green Theme
 label.red= Red Theme
@@ -41,7 +43,13 @@ label.engineering=Engineering
 label.foreignlanguages=Foreign Languages
 label.addTeacher= Add a Instructor
 label.addStudent= Add a Student
-label.teacherHeader1=All of the teachers can be seen below
-label.teacherHeader2=You can click the any teacher name for more details
+label.teacherHeader1=All of the instructors can be seen below
+label.teacherHeader2=You can click the any instructor name for more details
 label.studentHeader1=All of the students can be seen below
 label.studentHeader2=You can click the any student name for more details
+label.instructorName= Instructor's Name
+label.instructorSurname= Instructor's Surname
+label.instructorMobile= Instructor's Mobile
+label.title = Instructor's Title
+label.office= Instructor's Office
+label.email=Instructor's Email
