--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -5,7 +5,7 @@ Size.student1.studentHobby=Lütfen  {0} için  {2} ile {1} karakter arasında bi
 # {0} field adi, 2 ve 1 ise studentHobby size icin belirlenen min(2) ve max(1) degiskenleri.
 # Max'in 1. olma nedeni ise alfabetik siralanmalari
 
-label.admissionHeader=Öğrenci Kayıt
+
 label.studentName= Öğrenci Adı
 label.studentSurname= Öğrenci Soyadı
 label.studentHobby= Hobi
@@ -45,5 +45,15 @@ label.teacherHeader1=Bütün öğretmenleri aşağıdaki tabloda görebilirsiniz
 label.teacherHeader2=Daha fazla bilgi için öğretmen ismine tıklayın
 label.studentHeader1=Bütün öğrencileri aşağıdaki tabloda görebilirsiniz
 label.studentHeader2=Daha fazla bilgi için öğretmen ismine tıklayın
+label.instructorName= Öğretmen Adı
+label.instructorSurname= Soyadı
+label.instructorMobile= Telefon Numarası
+label.title = Unvan
+label.office= Ofis
+label.email=E-Mail
+label.addTeacherHeader= Öğretmen Kayıt
+label.addTeacherTitle= Kayıt Gönder
+label.addStudentTitle= Kayıt Gönder
+label.addStudentHeader= Öğrenci Kayıt
 
 
