Changed some routes

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -44,9 +44,9 @@ label.foreignlanguages=Foreign Languages
 label.addTeacher= Add a Instructor
 label.addStudent= Add a Student
 label.teacherHeader1=All of the instructors can be seen below
-label.teacherHeader2=You can click the any instructor name for more details
+label.teacherHeader2=You can click the instructor's name for more details
 label.studentHeader1=All of the students can be seen below
-label.studentHeader2=You can click the any student name for more details
+label.studentHeader2=You can click the student's name for more details
 label.instructorName= Instructor's Name
 label.instructorSurname= Instructor's Surname
 label.instructorMobile= Instructor's Mobile
