Rearranged the packages

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -53,3 +53,5 @@ label.instructorMobile= Instructor's Mobile
 label.title = Instructor's Title
 label.office= Instructor's Office
 label.email=Instructor's Email
+label.welcome = Welcome to the Student Registration System
+label.homeMessage= You can easily see all of the students and teachers in the system. In future this app will be improved a lot
