Added new jsp files for lectures and courses

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -50,3 +50,5 @@ label.addTeacherHeader= Lehrerzulassung für Universitätslehrgänge
 label.addTeacherTitle= Einreichung einreichen
 label.addStudentTitle= Einreichung einreichen
 label.addStudentHeader= Studentische Zulassung für Universitätslehrgänge
+label.welcome = Willkommen im Studentenregistrierungssystem
+label.homeMessage= Sie können Schüler, Lehrer und Vorträge aufnehmen. Sie können diese Informationen auch leicht anzeigen.
