--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -55,5 +55,7 @@ label.addTeacherHeader= Öğretmen Kayıt
 label.addTeacherTitle= Kayıt Gönder
 label.addStudentTitle= Kayıt Gönder
 label.addStudentHeader= Öğrenci Kayıt
+label.welcome = Öğrenci Kayıt Sistemine Hoşgeldiniz
+label.homeMessage= Bu sistemle öğrenci, ders veya öğretmen gibi veriler kaydedebilir. Bunları eşleştirebilir ve bu verilere de ulaşabilirsiniz.
 
 
