--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -54,4 +54,6 @@ label.title = Instructor's Title
 label.office= Instructor's Office
 label.email=Instructor's Email
 label.welcome = Welcome to the Student Registration System
-label.homeMessage= You can easily see all of the students and teachers in the system. In future this app will be improved a lot
+label.homeMessage= You can record students, instructors and lectures. You can also view these information easily.
+label.choosenStudent=In this page you can see choosen student's all of information.
+label.choosenInstructor=In this page you can see choosen instructors's all of information.
