Added delete buttons for students and instructors page

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -52,3 +52,6 @@ label.addStudentTitle= Einreichung einreichen
 label.addStudentHeader= Studentische Zulassung für Universitätslehrgänge
 label.welcome = Willkommen im Studentenregistrierungssystem
 label.homeMessage= Sie können Schüler, Lehrer und Vorträge aufnehmen. Sie können diese Informationen auch leicht anzeigen.
+label.deleteStudent= Den Schüler löschen
+label.deleteInstructor=Den Lehrer löschen
+
