--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -57,3 +57,5 @@ label.welcome = Welcome to the Student Registration System
 label.homeMessage= You can record students, instructors and lectures. You can also view these information easily.
 label.choosenStudent=In this page you can see choosen student's all of information.
 label.choosenInstructor=In this page you can see choosen instructors's all of information.
+label.deleteStudent= Delete Student
+label.deleteInstructor = Delete Instructor
