--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -57,5 +57,5 @@ label.addStudentTitle= Kayıt Gönder
 label.addStudentHeader= Öğrenci Kayıt
 label.welcome = Öğrenci Kayıt Sistemine Hoşgeldiniz
 label.homeMessage= Bu sistemle öğrenci, ders veya öğretmen gibi veriler kaydedebilir. Bunları eşleştirebilir ve bu verilere de ulaşabilirsiniz.
-
-
+label.deleteStudent= Öğrenciyi Sil
+label.deleteInstructor= Öğretmeni Sil
