Updated properties(language) files

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -54,4 +54,8 @@ label.welcome = Willkommen im Studentenregistrierungssystem
 label.homeMessage= Sie können Schüler, Lehrer und Vorträge aufnehmen. Sie können diese Informationen auch leicht anzeigen.
 label.deleteStudent= Den Schüler löschen
 label.deleteInstructor=Den Lehrer löschen
-
+label.courseName = Kursname
+label.courseCode = Kurscode
+label.instructionLanguage = Sprache
+label.classroom = Klassenzimmer
+label.daytime = Tageszeit
