--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -59,3 +59,8 @@ label.choosenStudent=In this page you can see choosen student's all of informati
 label.choosenInstructor=In this page you can see choosen instructors's all of information.
 label.deleteStudent= Delete Student
 label.deleteInstructor = Delete Instructor
+label.courseName = Course Name
+label.courseCode = Course Code
+label.instructionLanguage = Language
+label.classroom = Classroom
+label.daytime = Day-Time
