--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -59,3 +59,8 @@ label.welcome = Öğrenci Kayıt Sistemine Hoşgeldiniz
 label.homeMessage= Bu sistemle öğrenci, ders veya öğretmen gibi veriler kaydedebilir. Bunları eşleştirebilir ve bu verilere de ulaşabilirsiniz.
 label.deleteStudent= Öğrenciyi Sil
 label.deleteInstructor= Öğretmeni Sil
+label.courseName = Kurs Adı
+label.courseCode = Kurs Kodu
+label.instructionLanguage = Dil
+label.classroom = Sınıf
+label.daytime = Gün-Zaman
