--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -59,3 +59,4 @@ label.courseCode = Kurscode
 label.instructionLanguage = Sprache
 label.classroom = Klassenzimmer
 label.daytime = Tageszeit
+label.instructor= Der Lehrer
