--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -64,3 +64,4 @@ label.courseCode = Course Code
 label.instructionLanguage = Language
 label.classroom = Classroom
 label.daytime = Day-Time
+label.instructor= Instructor
