--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -48,6 +48,7 @@ label.studentHeader2=Daha fazla bilgi için öğretmen ismine tıklayın
 label.instructorName= Öğretmen Adı
 label.instructorSurname= Soyadı
 label.instructorMobile= Telefon Numarası
+label.instructor= Öğretmen
 label.title = Unvan
 label.office= Ofis
 label.email=E-Mail
