Implemented add operations for courses and lectures

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -24,6 +24,9 @@ label.studentNumber= Nummer des Studenten
 label.lecturePlan= Lecture Plan
 label.students= Studenten
 label.teachers = Lehreren
+label.lectures = Vorlesungen
+label.lecture = Vorlesung
+label.courses= Kurse
 label.contact = Kontakt
 label.about = Über Uns
 label.studentAdmission=Student Einreichung
@@ -36,6 +39,11 @@ label.engineering=Ingenieurwesen
 label.foreignlanguages=Fremdsprachen
 label.addTeacher= Füge einen Lehrer hinzu
 label.addStudent= Füge einen Schüler hinzu
+label.addLecture= Füge eine Vorlesung hinzu
+label.addCourse= Füge eine Kurse hinzu
+label.courseHeader= Alle Kurse sind unten zu sehen
+label.lectureHeader1=Alle Vorlesungen sind unten zu sehen
+label.lectureHeader2=Sie können auf den beliebigen Lehrernamen oder Kurscode für weitere Details klicken
 label.teacherHeader1=Alle Lehrer sind unten zu sehen
 label.teacherHeader2=Sie können auf den beliebigen Lehrernamen für weitere Details klicken
 label.studentHeader1=Alle Schüler sind unten zu sehen
@@ -46,6 +54,10 @@ label.instructorMobile= TelefonNummber
 label.title = Adel
 label.office= Stelle
 label.email=E-Mail
+label.addCourseTitle= Einreichung einreichen
+label.addCourseHeader= Kurs Zulassung für Universitätslehrgänge
+label.addLectureTitle= Einreichung einreichen
+label.addLectureHeader= Vorlesung Zulassung für Universitätslehrgänge
 label.addTeacherHeader= Lehrerzulassung für Universitätslehrgänge
 label.addTeacherTitle= Einreichung einreichen
 label.addStudentTitle= Einreichung einreichen
@@ -60,3 +72,7 @@ label.instructionLanguage = Sprache
 label.classroom = Klassenzimmer
 label.daytime = Tageszeit
 label.instructor= Der Lehrer
+label.enrollStudent =Einschreibung zur Vorlesung
+label.german = Deutsch
+label.english = Englisch
+label.turkish = Türkisch
