--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -5,10 +5,14 @@ Size.student1.studentHobby=Please enter a value for {0} between {2} and {1} char
 # {0} field adi, 2 ve 1 ise studentHobby size icin belirlenen min(2) ve max(1) degiskenleri.
 # Max'in 1. olma nedeni ise alfabetik siralanmalari
 
-label.addTeacherHeader= Teacher Admission
+label.addCourseTitle= Submit Course
+label.addCourseHeader= Course Registry
+label.addTeacherHeader= Instructor Registry
 label.addTeacherTitle=Submit Teacher
 label.addStudentTitle=Submit Student
-label.addStudentHeader=Student Admission for University Courses
+label.addStudentHeader=Student Registry
+label.addLectureTitle= Submit Lecture
+label.addLectureHeader= Lecture Registry
 label.studentName= Student's Name
 label.studentSurname=Student's Surname
 label.studentHobby= Student's Hobby
@@ -30,6 +34,9 @@ label.red= Red Theme
 label.studentNumber= Student's Number
 label.lecturePlan= Lecture Plan
 label.students= Students
+label.lectures = Lectures
+label.lecture = Lecture
+label.courses= Courses
 label.teachers = Instructors
 label.contact = Contact
 label.about = About
@@ -43,6 +50,11 @@ label.engineering=Engineering
 label.foreignlanguages=Foreign Languages
 label.addTeacher= Add a Instructor
 label.addStudent= Add a Student
+label.addLecture= Add a Lecture
+label.addCourse = Add a Course
+label.courseHeader= All of the courses can be seen below
+label.lectureHeader1=All of the lectures can be seen below
+label.lectureHeader2=You can click the instructor name or course code for more details
 label.teacherHeader1=All of the instructors can be seen below
 label.teacherHeader2=You can click the instructor's name for more details
 label.studentHeader1=All of the students can be seen below
@@ -65,3 +77,7 @@ label.instructionLanguage = Language
 label.classroom = Classroom
 label.daytime = Day-Time
 label.instructor= Instructor
+label.enrollStudent= Enroll To Lecture
+label.german = German
+label.english = English
+label.turkish = Turkish
