--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -29,6 +29,8 @@ label.studentNumber= Öğrenci Numarası
 label.lecturePlan= Ders Programı
 label.students= Öğrenciler
 label.teachers = Öğretmenler
+label.lectures = Sınıflar
+label.courses=  Dersler
 label.contact = İletişim
 label.about = Hakkımızda
 label.studentAdmission=Öğrenci Kayıt
@@ -41,6 +43,11 @@ label.engineering=Mühendislik
 label.foreignlanguages=Yabancı Diller
 label.addTeacher= Öğretmen Ekle
 label.addStudent= Öğrenci Ekle
+label.addLecture= Sınıf Ekle
+label.addCourse= Ders Ekle
+label.courseHeader= Bütün dersleri aşağıdaki tabloda görebilirsiniz
+label.lectureHeader1= Bütün sınıfları aşağıdaki tabloda görebilirsiniz
+label.lectureHeader2=Daha fazla bilgi için öğretmen adına veya ders koduna tıklayabilirsiniz
 label.teacherHeader1=Bütün öğretmenleri aşağıdaki tabloda görebilirsiniz
 label.teacherHeader2=Daha fazla bilgi için öğretmen ismine tıklayın
 label.studentHeader1=Bütün öğrencileri aşağıdaki tabloda görebilirsiniz
@@ -52,6 +59,10 @@ label.instructor= Öğretmen
 label.title = Unvan
 label.office= Ofis
 label.email=E-Mail
+label.addCourseTitle= Kayıt Gönder
+label.addCourseHeader= Ders Kayıt
+label.addLectureTitle= Kayıt Gönder
+label.addLectureHeader= Sınıf Kayıt
 label.addTeacherHeader= Öğretmen Kayıt
 label.addTeacherTitle= Kayıt Gönder
 label.addStudentTitle= Kayıt Gönder
@@ -65,3 +76,8 @@ label.courseCode = Kurs Kodu
 label.instructionLanguage = Dil
 label.classroom = Sınıf
 label.daytime = Gün-Zaman
+label.enrollStudent = Sınıfa Kaydol
+label.german = Almanca
+label.english = İngilizce
+label.turkish = Türkçe
+label.lecture = Sınıf
