Final jsp files are added

--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_de.properties
@@ -76,3 +76,6 @@ label.enrollStudent =Einschreibung zur Vorlesung
 label.german = Deutsch
 label.english = Englisch
 label.turkish = Türkisch
+label.enrollHeader= Schreib einem Student ein
+label.enrollTitle= Einschreibung
+label.enrollSuccess=Student ist erfolgreich eingeschrieben
