--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_en.properties
@@ -5,6 +5,8 @@ Size.student1.studentHobby=Please enter a value for {0} between {2} and {1} char
 # {0} field adi, 2 ve 1 ise studentHobby size icin belirlenen min(2) ve max(1) degiskenleri.
 # Max'in 1. olma nedeni ise alfabetik siralanmalari
 
+label.enrollHeader= Enroll a Student
+label.enrollTitle= Enrollment
 label.addCourseTitle= Submit Course
 label.addCourseHeader= Course Registry
 label.addTeacherHeader= Instructor Registry
@@ -81,3 +83,4 @@ label.enrollStudent= Enroll To Lecture
 label.german = German
 label.english = English
 label.turkish = Turkish
+label.enrollSuccess= Student is enrolled successfully
