--- a/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/messages_tr.properties
@@ -81,3 +81,6 @@ label.german = Almanca
 label.english = İngilizce
 label.turkish = Türkçe
 label.lecture = Sınıf
+label.enrollHeader= Öğrenci Kaydı
+label.enrollTitle=  Kaydet
+label.enrollSuccess= Öğrenci derse eklendi
